# ChangeLog for app-office/libreoffice
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-office/libreoffice/ChangeLog,v 1.87 2011/08/06 08:49:09 scarabeus Exp $

  06 Aug 2011; Tomáš Chvátal <scarabeus@gentoo.org>
  libreoffice-3.4.2.3.ebuild, libreoffice-3.4.9999.ebuild:
  Update branding to version 0.3. Fixes bug #377899. Sync the live and release
  ebuilds.

  05 Aug 2011; Michał Górny <mgorny@gentoo.org>
  files/libreoffice-check-for-avx.patch:
  Fix avx patch wrt bug #377845. Proxied for scarabeus.

  04 Aug 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  libreoffice-3.4.2.3.ebuild, +files/libreoffice-binfilter-as-needed.patch:
  Add as-needed patch, on request from scarabeus; fixes bug 376985

  04 Aug 2011; Tomáš Chvátal <scarabeus@gentoo.org>
  libreoffice-3.4.2.3.ebuild, libreoffice-3.4.9999.ebuild:
  media-libs/libwpg to app-text/libwpg

  04 Aug 2011; Tomáš Chvátal <scarabeus@gentoo.org>
  libreoffice-3.4.2.3.ebuild, +files/libreoffice-check-for-avx.patch,
  files/libreoffice-append-no-avx.patch:
  Update avx patchset and fix the linguas detection.

  03 Aug 2011; Tomáš Chvátal <scarabeus@gentoo.org>
  files/libreoffice-32b-qt4-libdir.patch:
  Update the qt patch as the 3.4 branch lacks quite few commits.

  03 Aug 2011; Tomáš Chvátal <scarabeus@gentoo.org>
  libreoffice-3.4.2.3.ebuild, libreoffice-3.4.9999.ebuild,
  +files/libreoffice-32b-qt4-libdir.patch:
  Fix finding qt libraries on 32b platform. Fixes bug #377377.

  01 Aug 2011; Tomáš Chvátal <scarabeus@gentoo.org>
  libreoffice-3.4.2.3.ebuild, +files/libreoffice-append-no-avx.patch:
  Append no-avx to fix segmentation fault.

  31 Jul 2011; Matt Turner <mattst88@gentoo.org> libreoffice-3.4.9999.ebuild:
  Remove seemingly unnecessary fonts from -3.4.9999 also.

  31 Jul 2011; Matt Turner <mattst88@gentoo.org> libreoffice-3.4.2.3.ebuild:
  Remove seemingly unnecessary fonts.

  30 Jul 2011; Tomáš Chvátal <scarabeus@gentoo.org>