@@ -170,14 +170,14 @@ DIST libreoffice-writer-3.4.2.3.tar.bz2 7294695 RMD160 2a7210c518376d9fe5c6e8a50
 DIST unowinreg.dll 6144 RMD160 9e2a2789a96842a2aec747a62dee3db3e8370761 SHA1 712720da502d36175cd7aa05cb1862ee0330638c SHA256 f563e522922133db9340b0306711c2d8767cc3481dd9e7d9b0d059906d12653c
 EBUILD libreoffice-3.3.1.ebuild 18572 RMD160 d92d1933c8bbde7d28425b11717614cf6cf7b1e0 SHA1 60ef1f62c341ce7997de7ff5bcef04b304f4dfd9 SHA256 a3fae0a7f7da4a92e67d9c86ba4e7f92a92bbfac8f40a2703c64f317b670da6b
 EBUILD libreoffice-3.3.3.ebuild 18134 RMD160 95cf52bf10765cd9bb7862c673dc57a96bcca376 SHA1 4a001ff974125839ad5219915bb2f8399e6f90f8 SHA256 a60d52f57767ac5e9f46ad5204dd27b4f4a45ac1468357c41462b502d37b8626
-EBUILD libreoffice-3.4.2.3.ebuild 19238 RMD160 2b628b6aaf3576ce0a3c8ad3e93041f280c59f97 SHA1 56211d7d47dd90374e0c5c76acf2dbbd425f3fcf SHA256 b1ae77fc7042f2aaa12d509808f238cbdf3d6d5fe72d50b56aedfae72ca3a722
-EBUILD libreoffice-3.4.9999.ebuild 19191 RMD160 f1ea0c786ea13a473b49bfccfc5567780d18db25 SHA1 6ba940e8f4eed9fd41a7a1d53909c934a3dc2a96 SHA256 e4eebdeef286424f26ed66300a2f8cd16185f1fa286da442e30037087b350df7
-MISC ChangeLog 17368 RMD160 fb8dddd75d64f0c6e211f87fa3228766761a5539 SHA1 d8aa19ac69cda97661f5c62a101a9b9e67397cb8 SHA256 3c60913892ca5ef9a149c8bca5ee1e0ef7d2563876db80c5e70a6ea9d17d1a84
+EBUILD libreoffice-3.4.2.3.ebuild 19238 RMD160 951ef8a754c3c861510be41efda560fc95d3e2fa SHA1 fb489942b0c35f4f1dad4082d152df01dbfffa6e SHA256 89f564402b41550814d39397c6dc0e06ffd5bbd6a4b40ff44998a0aa5e73bb08
+EBUILD libreoffice-3.4.9999.ebuild 19191 RMD160 e095f1c49a673064da0cef218047741b1f6c0882 SHA1 84e52a7524495ef3cf483a03a8052a1bf773a1c6 SHA256 6307689f67ee8e4ceaa3e932645c5245fca338f13f95cde537ac1a350799e5e4
+MISC ChangeLog 17529 RMD160 ff21ae23761ece9a18e64c0d0f39308015dc2233 SHA1 0bdd759338bb15ebe0323524e67edefc36736856 SHA256 ddca51aff0cb2ddd4ea37f59ddac9a1176dc7965be3bf8a3206bc92f3521c385
 MISC metadata.xml 1070 RMD160 5a010568eabba00eaa6193765fa5d181462dc5a5 SHA1 9973d230e4e10704136eddd33c8e20ddf485ba9f SHA256 c15b697bd70ccf20aef38b02b55a316cc02df24e027daf6d9b0d185d920469b3
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk49AAsACgkQHB6c3gNBRYeZCACgg/6HCr/4PJ/aBgLNW3T4tzBm
-ULUAoMc/GJR3/OID2mt5kITvg13P2i94
-=esUY
+iEYEARECAAYFAk49cEUACgkQTVUdg23rv52L2gCdFWZphjICCGPKXssF4FoPZEpW
+nG8An3gOUAchAs1b7gr8vQA9QZ3Oruo5
+=X6RO
 -----END PGP SIGNATURE-----
