@@ -1,6 +1,10 @@
 # ChangeLog for app-office/libreoffice
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/libreoffice/ChangeLog,v 1.87 2011/08/06 08:49:09 scarabeus Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/libreoffice/ChangeLog,v 1.88 2011/08/06 16:48:01 mattst88 Exp $
+
+  06 Aug 2011; Matt Turner <mattst88@gentoo.org> libreoffice-3.4.2.3.ebuild,
+  libreoffice-3.4.9999.ebuild:
+  Replace LINGUAS_OOO with LO_LANGUAGES, bug 378007.
 
   06 Aug 2011; Tomáš Chvátal <scarabeus@gentoo.org>
   libreoffice-3.4.2.3.ebuild, libreoffice-3.4.9999.ebuild:
